fix: arrow up button placement on mobile

--- a/src/sass/components/_up-arrow.scss
+++ b/src/sass/components/_up-arrow.scss
@@ -5,7 +5,7 @@
 .container-arrow-up {
   position: fixed;
   line-height: 0;
-  bottom: 19px;
+  bottom: 49px;
   right: 19px;
   border-radius: 50%;
   width: 47px;
@@ -19,12 +19,16 @@
       fill: $bg-color-accent;
     }
   }
+
+  @include mq(tablet) {
+    bottom: 19px;
+  }
 }
 .arrow {
   position: fixed;
   right: 20px;
   border-radius: 50%;
-  bottom: 20px;
+  bottom: 50px;
   width: 45px;
   height: 45px;
   line-height: 0;
@@ -32,6 +36,10 @@
   opacity: 0.75;
   cursor: pointer;
   border: 3 solid #bababa;
+
+  @include mq(tablet) {
+    bottom: 20px;
+  }
 }
 
 @keyframes arrowFloat {
